@@ -14,6 +14,9 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.20.0'
     implementation 'org.telegram:telegrambots-longpolling:10.3.0'
     implementation 'org.telegram:telegrambots-client:10.3.0'
+    implementation 'org.flywaydb:flyway-core:13.6.0'
+    implementation 'org.flywaydb:flyway-database-nc-sqlite:13.6.0'
+    implementation 'org.xerial:sqlite-jdbc:3.53.4.0'
 
     testImplementation platform('org.junit:junit-bom:5.13.4')
     testImplementation 'org.junit.jupiter:junit-jupiter'
@@ -22,10 +25,12 @@ dependencies {
 
 application {
     mainClass = 'studio.pixelpoint.magicpet.MagicPetApplication'
+    applicationDefaultJvmArgs = ['--enable-native-access=ALL-UNNAMED']
 }
 
 tasks.named('test') {
     useJUnitPlatform()
+    jvmArgs '--enable-native-access=ALL-UNNAMED'
 }
 
 tasks.withType(JavaCompile).configureEach {
